--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "extract-word-docs": "^1.1.4",
     "html-pdf-node": "^1.0.8",
-    "nodemon": "^2.0.16"
+    "multer": "*",
+    "nodemon": "^2.0.16",
+    "pdftohtmljs": "^0.6.0",
+    "word-to-html": "^3.0.3"
   }
 }
