--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "html-pdf-node": "^1.0.8",
     "nodemon": "^2.0.16"
+  },
+  "devDependencies": {
+    "html-pdf-node": "^1.0.8"
   }
 }
