--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev":"nodemon --ignore public/"
   },
   "dependencies": {
     "body-parser": "^1.20.0",
@@ -12,6 +13,7 @@
     "express": "^4.18.1",
     "extract-word-docs": "^1.1.4",
     "html-pdf-node": "^1.0.8",
+    "html-to-docx": "^1.3.2",
     "multer": "*",
     "nodemon": "^2.0.16",
     "pdftohtmljs": "^0.6.0",
